--- a/src/index.html
+++ b/src/index.html
@@ -10,65 +10,44 @@
 </head>
 
 <body>
-    <div class="container">
-
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
-        </button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-            Launch demo modal
-        </button>
-
-
-        <div class="row">
-            <div class="col">blue</div>
-            <div class="col">red</div>
-            <div class="col">green</div>
-        </div>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>
-                        Modal 1
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+    <header class="header">
+        <div class="header__wrapper container">
+            <div class="header__logo">
+                <p>Holo.</p>
             </div>
-        </div>
-    </div>
-    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus accusamus inventore iusto
-                        beatae expedita quaerat ullam voluptas, rem dicta ratione, sunt id! Fugiat facilis consequuntur
-                        eos veritatis provident molestias quas illo velit. Atque sapiente quod magni! Amet voluptatibus
-                        deserunt, sapiente cumque eos accusamus cupiditate nisi quae, corporis sit assumenda ullam!
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+            <div class="hamburger__wrapper">
+                <button class="hamburger" aria-controls="primary-navigation" aria-expanded="false">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
+            <nav class="header__nav" data-visible="false" id="primary-navigation">
+                <li class="active">
+                    <a href="/" class="header__nav-link">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="/" class="header__nav-link">
+                        Store
+                    </a>
+                </li>
+                <li>
+                    <a href="/" class="header__nav-link">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="/" class="header__nav-link">
+                        Contact Us
+                    </a>
+                </li>
+            </nav>
         </div>
-    </div>
+    </header>
+
     <script src="./app/main.js" type="module"></script>
 </body>
 
