Add : desktop header

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header">
-        <div class="header__wrapper container">
+        <div class="header__wrapper">
             <div class="header__logo">
                 <p>Holo.</p>
             </div>
@@ -44,9 +44,18 @@
                         Contact Us
                     </a>
                 </li>
+                <li>
+                    <a href="/" class="header__nav-link btn btn-primary">
+                        Buy Now
+                    </a>
+                </li>
             </nav>
         </div>
     </header>
+    <main class="page-wrap"></main>
+    <footer class="footer">
+
+    </footer>
 
     <script src="./app/main.js" type="module"></script>
 </body>
