--- a/src/about.html
+++ b/src/about.html
@@ -5,14 +5,225 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>About</title>
     <link rel="stylesheet" href="./assets/style.scss">
 </head>
 
 <body>
-    <h1>About</h1>
+    <header class="header">
+        <div class="header__wrapper">
+            <div class="header__logo">
+                <p>Holo.</p>
+            </div>
+            <div class="hamburger__wrapper">
+                <button class="hamburger" aria-controls="primary-navigation" aria-expanded="false">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+            <nav class="header__nav" data-visible="false" id="primary-navigation">
+                <li>
+                    <a href="/" class="header__nav-link">
+                        Home
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="/" class="header__nav-link">
+                        Store
+                    </a>
+                </li>
+                <li>
+                    <a href="/" class="header__nav-link">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="/" class="header__nav-link">
+                        Contact Us
+                    </a>
+                </li>
+                <li>
+                    <a href="/" class="header__nav-link btn btn-primary">
+                        Buy Now
+                    </a>
+                </li>
+            </nav>
+        </div>
+    </header>
+    <main class="page-wrap">
+        <!-- Text media -->
+        <section class="section text-media text-media--right container">
+            <div class="text-media__wrapper">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>A home loan process built by a tech company, not a bank</h2>
+                        <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                        <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text-media__image">
+                            <picture>
+                                <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
+                                <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <section class="footer__top">
+                <div class="footer__wrapper-box row">
+                    <div class="footer__top-item col-md-4">
+                        <h2>Let's talk</h2>
+                        <p class="footer__description">
+                            Sometimes we all just need to talk to a human
+                            <strong>Live customer support</strong>
+                            <br>
+                            Mon - Fri 8am to 6.30pm,
+                            <br>
+                            Sat - Sun 9am to 5pm (UTC +8)
+                        </p>
+                        <div class="footer__button">
+                            <a href="contact.html" class="btn btn-secondary">
+                                Let's talk
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer__top-item col-md-2">
+                        <ul class="footer__contact">
+                            <li class="row">
+                                <span class="col-2">
+                                    <i class="icon-phone"></i>
+                                </span>
+                                <span class="col-10">
+                                    <a href="tel:+89655771793">089655771793</a>
+                                </span>
+                            </li>
+                            <li class="row">
+                                <span class="col-2">
+                                    <i class="icon-mail"></i>
+                                </span>
+                                <span class="col-10">
+                                    <a href="mailto:wijayaac25@gmail.com">Email us</a>
+                                </span>
+                            </li>
+                            <li class="row">
+                                <span class="col-2">
+                                    <i class="icon-send"></i>
+                                </span>
+                                <span class="col-10">
+                                    <a href="https://goo.gl/maps/wiBFbXfyJ6HBo2Qo9" target="_blank" rel="noopener noreferrer">
+                                        Denpasar 80116, Bali INDONESIA
+                                    </a>
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__top-item col-md-4">
+                        <h3>Connect with us</h3>
+                        <ul class="footer__social row">
+                            <li class="col-2">
+                                <a title="Facebook" href="https://www.facebook.com/wijaya.twick.9" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-facebook"></i>
+                                </a>
+                            </li>
+                            <li class="col-2">
+                                <a title="Instagram" href="https://www.instagram.com/wijayaac25/" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="col-2">
+                                <a title="Linkedin" href="https://www.linkedin.com/in/kadek-wijaya/" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="col-2">
+                                <a title="Github" href="https://github.com/Wijayaac" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="footer__middle">
+                <div class="footer__wrapper-box row">
+                    <div class="footer__middle-item col-md-3">
+                        <h3>Shop Products</h3>
+                        <ul>
+                            <li>
+                                <a href="products.html#">Women Clothes</a>
+                            </li>
+                            <li>
+                                <a href="products.html#">Man Clothes</a>
+                            </li>
+                            <li>
+                                <a href="products.html#">Accessories</a>
+                            </li>
+                            <li>
+                                <a href="products.html#">Electronics</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__middle-item col-md-3">
+                        <h3>Customer help</h3>
+                        <ul>
+                            <li>
+                                <a href="contact.html#">Let's talk</a>
+                            </li>
+                            <li>
+                                <a href="about.html#">FAQ</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__middle-item col-md-3">
+                        <h3>About Holo.</h3>
+                        <ul>
+                            <li>
+                                <a href="about.html#">About us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__middle-item col-md-3">
+                        <h3>The legal</h3>
+                        <ul>
+                            <li>
+                                <a href="about.html#">Term of Service</a>
+                            </li>
+                            <li>
+                                <a href="about.html#">Cookie Policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="footer__bottom">
+                <div class="footer__wrapper-box row">
+                    <div class="footer__bottom-item col-md-3">
+                        <p>&copy; 2023 Holo Store.</p>
+                        <p>License 123.231.422. Tax ID 2349 2130 213</p>
+                    </div>
+                    <div class="footer__bottom-item col-md-3 text-center">
+                        <a title="Wijaya" href="https://github.com/Wijayaac" target="_blank" rel="noopener noreferrer">Created by Wijaya</a>
+                    </div>
+                    <div class="footer__bottom-item col-md-3 text-center">
+                        <p>Powered by</p>
+                        <a href="https://www.netlify.com/" target="_blank" rel="noopener noreferrer" class="logo">
+                            <i class="icon-netlify"></i>
+                            Netlify
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </footer>
 
-    <script type="module" src="./app/main.js"></script>
+    <script src="./app/main.js" type="module"></script>
 </body>
 
 </html>
