--- a/src/about.html
+++ b/src/about.html
@@ -29,12 +29,12 @@
                         Home
                     </a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="/" class="header__nav-link">
                         Store
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/" class="header__nav-link">
                         About Us
                     </a>
@@ -53,21 +53,229 @@
         </div>
     </header>
     <main class="page-wrap">
-        <!-- Text media -->
-        <section class="section text-media text-media--right container">
-            <div class="text-media__wrapper">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h2>A home loan process built by a tech company, not a bank</h2>
-                        <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
-                        <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+        <!-- Banner -->
+        <section class="section banner banner--normal">
+            <div class="container">
+                <div class="banner__wrapper">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h1>A <span>simple</span>, no-strings attached home loan</h1>
+                            <p class="subheading">Save money, time and stress.</p>
+                        </div>
+                        <div class="col-md-6 offset-md-1">
+                            <div class="image-wrapper banner__image banner__image--normal">
+                                <picture>
+                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
+                                    <img src="./img/about-media-1.jpg" alt="Simple">
+                                </picture>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="text-media__image">
-                            <picture>
-                                <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
-                            </picture>
+                </div>
+            </div>
+        </section>
+        <!-- Text media -->
+        <section class="section text-media text-media--right">
+            <div class="container">
+                <div class="text-media__wrapper">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h2>A home loan process built by a tech company, not a bank</h2>
+                            <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                            <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                        </div>
+                        <div class="col-md-5 offset-md-1">
+                            <div class="text-media__image image-wrapper">
+                                <picture>
+                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
+                                    <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Text media reverse -->
+        <section class="section text-media text-media--left">
+            <div class="container">
+                <div class="text-media__wrapper">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="text-media__image image-wrapper">
+                                <picture>
+                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
+                                    <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-6 offset-md-1">
+                            <h2>A home loan process built by a tech company, not a bank</h2>
+                            <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                            <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Text media -->
+        <section class="section text-media text-media--right">
+            <div class="container">
+                <div class="text-media__wrapper">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h2>A home loan process built by a tech company, not a bank</h2>
+                            <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                            <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                        </div>
+                        <div class="col-md-5 offset-md-1">
+                            <div class="text-media__image image-wrapper">
+                                <picture>
+                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
+                                    <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Accordion -->
+        <section class="section accordion container">
+            <div class="accordion__wrapper">
+                <div class="accordion__header">
+                    <p class="subtitle">FAQs</p>
+                    <h2>About Holo.</h2>
+                    <p class="subheading">
+                        Want to know more about Tic:Toc? You can find out who we are, and how we operate, so you can get to know us better.
+                    </p>
+                </div>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Accordion Item #1
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Accordion Item #2
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Accordion Item #3
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Partner -->
+        <section class="section partner">
+            <div class="container">
+                <div class="partner__wrapper">
+                    <div class="partner__header">
+                        <p class="subtitle">Our Trusted</p>
+                        <h2>Partners</h2>
+                        <p class="subheading">We are working with multiple business that known as the best in their industries.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/dev-logo.svg" alt="dev">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/dev-logo.svg" alt="dev">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/dev-logo.svg" alt="dev">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/dev-logo.svg" alt="dev">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/dev-logo.svg" alt="dev">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="image-wrapper partner__logo">
+                                <picture>
+                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                </picture>
+                            </div>
                         </div>
                     </div>
                 </div>
