--- a/src/term.html
+++ b/src/term.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./assets/style.scss">
 </head>
 
-<body>
+<body class="term text-page">
     <header class="header">
         <div class="header__wrapper">
             <div class="header__logo">
-                <p>Holo.</p>
+                <a href="/">Holo.</a>
             </div>
             <div class="hamburger__wrapper">
                 <button class="hamburger" aria-controls="primary-navigation" aria-expanded="false">
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/" class="header__nav-link">
+                    <a href="products.html" class="header__nav-link">
                         Store
                     </a>
                 </li>
@@ -39,13 +39,13 @@
                         About Us
                     </a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="contact.html" class="header__nav-link">
                         Contact Us
                     </a>
                 </li>
                 <li>
-                    <a href="/" class="header__nav-link btn btn-primary">
+                    <a href="products.html" class="header__nav-link btn btn-primary">
                         Buy Now
                     </a>
                 </li>
