Add : product page

--- a/src/about.html
+++ b/src/about.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="products.html" class="header__nav-link btn btn-primary">
+                    <a href="products.html" class="header__nav-link btn btn-primary btn-lead">
                         Buy Now
                     </a>
                 </li>
