Add : header on scroll effect

--- a/src/term.html
+++ b/src/term.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/style.scss">
 </head>
 
-<body class="term text-page">
+<body class="term text-page internal-page">
     <header class="header">
         <div class="header__wrapper">
             <div class="header__logo">
