Add : swiper slider

--- a/src/products.html
+++ b/src/products.html
@@ -309,98 +309,107 @@
                 </div>
             </div>
         </section>
+        <!-- Review Slider -->
         <section class="section review-slider">
             <div class="container">
                 <div class="review-slider__wrapper">
                     <div class="review-slider__header">
                         <h2>Hear from our customers.</h2>
-                        <div class="review-slider__navigation">
-                            <button class="review-slider-prev">Prev</button>
-                            <button class="review-slider-next">Next</button>
-                        </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 review-slider__item">
-                            <div class="card card--review">
-                                <div class="card__description">
-                                    <ul class="product__rating product__rating--review">
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                    </ul>
-                                    <h3 class="card__text card__text--title">Best product experience possible</h3>
-                                    <p class="review-slider__description">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
-                                    </p>
-                                    <p class="review-slider__author">- John Smith</p>
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide review-slider__item">
+                                <div class="card card--review">
+                                    <div class="card__description">
+                                        <ul class="product__rating product__rating--review">
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                        </ul>
+                                        <h3 class="card__text card__text--title">Best product experience possible</h3>
+                                        <p class="review-slider__description">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
+                                        </p>
+                                        <p class="review-slider__author">- John Smith</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide review-slider__item">
+                                <div class="card card--review">
+                                    <div class="card__description">
+                                        <ul class="product__rating product__rating--review">
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                        </ul>
+                                        <h3 class="card__text card__text--title">Best product experience possible</h3>
+                                        <p class="review-slider__description">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
+                                        </p>
+                                        <p class="review-slider__author">- John Smith</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide review-slider__item">
+                                <div class="card card--review">
+                                    <div class="card__description">
+                                        <ul class="product__rating product__rating--review">
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                        </ul>
+                                        <h3 class="card__text card__text--title">Best product experience possible</h3>
+                                        <p class="review-slider__description">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
+                                        </p>
+                                        <p class="review-slider__author">- John Smith</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 review-slider__item">
-                            <div class="card card--review">
-                                <div class="card__description">
-                                    <ul class="product__rating product__rating--review">
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                    </ul>
-                                    <h3 class="card__text card__text--title">Best product experience possible</h3>
-                                    <p class="review-slider__description">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
-                                    </p>
-                                    <p class="review-slider__author">- John Smith</p>
+                        <div class="review-slider__button">
+                            <div class="review-slider__navigation">
+                                <div class="swiper-button-prev review-slider-prev">
+                                    <i class="icon-prev"></i>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 review-slider__item">
-                            <div class="card card--review">
-                                <div class="card__description">
-                                    <ul class="product__rating product__rating--review">
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                        <li>
-                                            <i class="icon-star"></i>
-                                        </li>
-                                    </ul>
-                                    <h3 class="card__text card__text--title">Best product experience possible</h3>
-                                    <p class="review-slider__description">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
-                                    </p>
-                                    <p class="review-slider__author">- John Smith</p>
+                                <div class="swiper-button-next review-slider-next">
+                                    <i class="icon-next"></i>
                                 </div>
                             </div>
                         </div>
@@ -408,6 +417,7 @@
                 </div>
             </div>
         </section>
+        <!-- Progress Step -->
         <section class="section step">
             <div class="container">
                 <div class="step__progress">
