--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
 
                     </div>
                     <div class="product__button">
-                        <button class="btn btn-primary">View More</button>
+                        <a href="products.html" class="btn btn-primary">View More</a>
                     </div>
                 </div>
             </div>
