--- a/src/products.html
+++ b/src/products.html
@@ -304,7 +304,7 @@
                         </div>
                     </div>
                     <div class="product__button">
-                        <button class="btn btn-primary">load more</button>
+                        <button class="btn btn-primary" id="loadMoreProduct">load more</button>
                     </div>
                 </div>
             </div>
