Add : mobile responsive styling & footer link

--- a/src/about.html
+++ b/src/about.html
@@ -80,9 +80,11 @@
                 <div class="text-media__wrapper">
                     <div class="row">
                         <div class="col-md-6">
-                            <h2>A home loan process built by a tech company, not a bank</h2>
-                            <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
-                            <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                            <div class="text-media__description">
+                                <h2>A home loan process built by a tech company, not a bank</h2>
+                                <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                                <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                            </div>
                         </div>
                         <div class="col-md-5 offset-md-1">
                             <div class="text-media__image image-wrapper">
@@ -110,9 +112,11 @@
                             </div>
                         </div>
                         <div class="col-md-6 offset-md-1">
-                            <h2>A home loan process built by a tech company, not a bank</h2>
-                            <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
-                            <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                            <div class="text-media__description">
+                                <h2>A home loan process built by a tech company, not a bank</h2>
+                                <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                                <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -124,9 +128,11 @@
                 <div class="text-media__wrapper">
                     <div class="row">
                         <div class="col-md-6">
-                            <h2>A home loan process built by a tech company, not a bank</h2>
-                            <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
-                            <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                            <div class="text-media__description">
+                                <h2>A home loan process built by a tech company, not a bank</h2>
+                                <p class="subheading">Holo. launched in 2017 and turned the home loan process on its head.</p>
+                                <p>Our proprietary technology enabled a world-first: a low-cost home loan that can be delivered to customers – with a contract – in less than 58 minutes, from the time they started their application. But it’s not just about speed for us. Tic:Toc’s tech makes the lending process so efficient, our Home Loan experts can focus on the stuff that matters – helping customers, if and when they need it.</p>
+                            </div>
                         </div>
                         <div class="col-md-5 offset-md-1">
                             <div class="text-media__image image-wrapper">
@@ -199,84 +205,88 @@
                         <h2>Partners</h2>
                         <p class="subheading">We are working with multiple business that known as the best in their industries.</p>
                     </div>
-                    <div class="row">
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
+                    <div class="swiper">
+
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -365,16 +375,16 @@
                         <h3>Shop Products</h3>
                         <ul>
                             <li>
-                                <a href="products.html#">Women Clothes</a>
+                                <a href="products.html">Women Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Man Clothes</a>
+                                <a href="products.html">Man Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Accessories</a>
+                                <a href="products.html">Accessories</a>
                             </li>
                             <li>
-                                <a href="products.html#">Electronics</a>
+                                <a href="products.html">Electronics</a>
                             </li>
                         </ul>
                     </div>
@@ -382,10 +392,10 @@
                         <h3>Customer help</h3>
                         <ul>
                             <li>
-                                <a href="contact.html#">Let's talk</a>
+                                <a href="contact.html">Let's talk</a>
                             </li>
                             <li>
-                                <a href="about.html#">FAQ</a>
+                                <a href="about.html">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -393,7 +403,7 @@
                         <h3>About Holo.</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">About us</a>
+                                <a href="about.html">About us</a>
                             </li>
                         </ul>
                     </div>
@@ -401,10 +411,10 @@
                         <h3>The legal</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">Term of Service</a>
+                                <a href="term.html">Term of Service</a>
                             </li>
                             <li>
-                                <a href="about.html#">Cookie Policy</a>
+                                <a href="term.html">Cookie Policy</a>
                             </li>
                         </ul>
                     </div>
