--- a/src/contact.html
+++ b/src/contact.html
@@ -193,9 +193,11 @@
                                     <img src="./img/about-media-1.jpg" alt="Save">
                                 </picture>
                             </div>
-                            <p>Can't find what you are looking for?</p>
-                            <div class="faq-shortcut__button">
-                                <a href="about.html" class="btn btn-primary">More FAQs</a>
+                            <div class="faq-shortcut__button faq-shortcut__button--desktop">
+                                <p>Can't find what you are looking for?</p>
+                                <div class="faq-shortcut__button">
+                                    <a href="about.html" class="btn btn-primary">More FAQs</a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -246,6 +248,13 @@
                                     </a>
                                 </li>
                             </ul>
+
+                            <div class="faq-shortcut__button faq-shortcut__button--mobile">
+                                <p>Can't find what you are looking for?</p>
+                                <div class="faq-shortcut__button">
+                                    <a href="about.html" class="btn btn-primary">More FAQs</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -351,16 +360,16 @@
                         <h3>Shop Products</h3>
                         <ul>
                             <li>
-                                <a href="products.html#">Women Clothes</a>
+                                <a href="products.html">Women Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Man Clothes</a>
+                                <a href="products.html">Man Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Accessories</a>
+                                <a href="products.html">Accessories</a>
                             </li>
                             <li>
-                                <a href="products.html#">Electronics</a>
+                                <a href="products.html">Electronics</a>
                             </li>
                         </ul>
                     </div>
@@ -368,10 +377,10 @@
                         <h3>Customer help</h3>
                         <ul>
                             <li>
-                                <a href="contact.html#">Let's talk</a>
+                                <a href="contact.html">Let's talk</a>
                             </li>
                             <li>
-                                <a href="about.html#">FAQ</a>
+                                <a href="about.html">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -379,7 +388,7 @@
                         <h3>About Holo.</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">About us</a>
+                                <a href="about.html">About us</a>
                             </li>
                         </ul>
                     </div>
@@ -387,10 +396,10 @@
                         <h3>The legal</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">Term of Service</a>
+                                <a href="term.html">Term of Service</a>
                             </li>
                             <li>
-                                <a href="about.html#">Cookie Policy</a>
+                                <a href="term.html">Cookie Policy</a>
                             </li>
                         </ul>
                     </div>
