--- a/src/index.html
+++ b/src/index.html
@@ -437,82 +437,143 @@
                         <h2>Partners</h2>
                         <p class="subheading">We are working with multiple business that known as the best in their industries.</p>
                     </div>
+                    <div class="swiper">
+
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/dev-logo.svg" alt="dev">
+                                    </picture>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="image-wrapper partner__logo">
+                                    <picture>
+                                        <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Progress Step -->
+        <section class="section step">
+            <div class="container">
+                <div class="step__progress">
                     <div class="row">
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
+                        <div class="col-md-6">
+                            <h2>Full or conditional approval in 3 easy steps</h2>
+                            <p>Apply for approval online and receive a digital answer (with human help when you need it). Anywhere. Any time.</p>
+                            <div class="image-wrapper step__image">
                                 <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
+                                    <img src="./img/about-media-1.jpg" alt="Easy steps">
                                 </picture>
                             </div>
                         </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
+                        <div class="col-md-6">
+                            <div class="step__wrapper">
+                                <div class="step__bar">
+                                    <span class="step__bar--current"></span>
+                                    <span class="step__bar--rails"></span>
+                                </div>
+                                <div class="step__item">
+                                    <div class="step__item-order">
+                                        <span>1</span>
+                                    </div>
+                                    <div class="step__item-content">
+                                        <h3 class="h2">Get Ready</h3>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error nulla id saepe eos odio ut voluptate pariatur! Earum at dolores, quasi cum laudantium quos eveniet placeat cumque exercitationem explicabo eos voluptatum minima veritatis corrupti.</p>
+                                    </div>
+                                </div>
+                                <div class="step__item">
+                                    <div class="step__item-order">
+                                        <span>2</span>
+                                    </div>
+                                    <div class="step__item-content">
+                                        <h3 class="h2">Get Ready</h3>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error nulla id saepe eos odio ut voluptate pariatur! Earum at dolores, quasi cum laudantium quos eveniet placeat cumque exercitationem explicabo eos voluptatum minima veritatis corrupti.</p>
+                                    </div>
+                                </div>
+                                <div class="step__item">
+                                    <div class="step__item-order">
+                                        <span>3</span>
+                                    </div>
+                                    <div class="step__item-content">
+                                        <h3 class="h2">Get Ready</h3>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error nulla id saepe eos odio ut voluptate pariatur! Earum at dolores, quasi cum laudantium quos eveniet placeat cumque exercitationem explicabo eos voluptatum minima veritatis corrupti.</p>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/dev-logo.svg" alt="dev">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="image-wrapper partner__logo">
-                                <picture>
-                                    <img src="./img/netlify-logo.svg" alt="Netlify">
-                                </picture>
+                            <div class="step__button">
+                                <a href="products.html" class="btn btn-primary btn-lead">Buy now</a>
+                                <a href="contact.html" class="btn btn-arrow">Contact us</a>
                             </div>
                         </div>
                     </div>
@@ -603,16 +664,16 @@
                         <h3>Shop Products</h3>
                         <ul>
                             <li>
-                                <a href="products.html#">Women Clothes</a>
+                                <a href="products.html">Women Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Man Clothes</a>
+                                <a href="products.html">Man Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Accessories</a>
+                                <a href="products.html">Accessories</a>
                             </li>
                             <li>
-                                <a href="products.html#">Electronics</a>
+                                <a href="products.html">Electronics</a>
                             </li>
                         </ul>
                     </div>
@@ -620,10 +681,10 @@
                         <h3>Customer help</h3>
                         <ul>
                             <li>
-                                <a href="contact.html#">Let's talk</a>
+                                <a href="contact.html">Let's talk</a>
                             </li>
                             <li>
-                                <a href="about.html#">FAQ</a>
+                                <a href="about.html">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -631,7 +692,7 @@
                         <h3>About Holo.</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">About us</a>
+                                <a href="about.html">About us</a>
                             </li>
                         </ul>
                     </div>
@@ -639,10 +700,10 @@
                         <h3>The legal</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">Term of Service</a>
+                                <a href="term.html">Term of Service</a>
                             </li>
                             <li>
-                                <a href="about.html#">Cookie Policy</a>
+                                <a href="term.html">Cookie Policy</a>
                             </li>
                         </ul>
                     </div>
