--- a/src/products.html
+++ b/src/products.html
@@ -417,63 +417,6 @@
                 </div>
             </div>
         </section>
-        <!-- Progress Step -->
-        <section class="section step">
-            <div class="container">
-                <div class="step__progress">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h2>Full or conditional approval in 3 easy steps</h2>
-                            <p>Apply for approval online and receive a digital answer (with human help when you need it). Anywhere. Any time.</p>
-                            <div class="image-wrapper step__image">
-                                <picture>
-                                    <img src="./img/about-media-1.jpg" alt="Easy steps">
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="step__wrapper">
-                                <div class="step__bar">
-                                    <span class="step__bar--current"></span>
-                                    <span class="step__bar--rails"></span>
-                                </div>
-                                <div class="step__item">
-                                    <div class="step__item-order">
-                                        <span>1</span>
-                                    </div>
-                                    <div class="step__item-content">
-                                        <h3 class="h2">Get Ready</h3>
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error nulla id saepe eos odio ut voluptate pariatur! Earum at dolores, quasi cum laudantium quos eveniet placeat cumque exercitationem explicabo eos voluptatum minima veritatis corrupti.</p>
-                                    </div>
-                                </div>
-                                <div class="step__item">
-                                    <div class="step__item-order">
-                                        <span>2</span>
-                                    </div>
-                                    <div class="step__item-content">
-                                        <h3 class="h2">Get Ready</h3>
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error nulla id saepe eos odio ut voluptate pariatur! Earum at dolores, quasi cum laudantium quos eveniet placeat cumque exercitationem explicabo eos voluptatum minima veritatis corrupti.</p>
-                                    </div>
-                                </div>
-                                <div class="step__item">
-                                    <div class="step__item-order">
-                                        <span>3</span>
-                                    </div>
-                                    <div class="step__item-content">
-                                        <h3 class="h2">Get Ready</h3>
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error nulla id saepe eos odio ut voluptate pariatur! Earum at dolores, quasi cum laudantium quos eveniet placeat cumque exercitationem explicabo eos voluptatum minima veritatis corrupti.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="step__button">
-                                <a href="products.html" class="btn btn-primary btn-lead">Buy now</a>
-                                <a href="contact.html" class="btn btn-arrow">Contact us</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
@@ -558,16 +501,16 @@
                         <h3>Shop Products</h3>
                         <ul>
                             <li>
-                                <a href="products.html#">Women Clothes</a>
+                                <a href="products.html">Women Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Man Clothes</a>
+                                <a href="products.html">Man Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Accessories</a>
+                                <a href="products.html">Accessories</a>
                             </li>
                             <li>
-                                <a href="products.html#">Electronics</a>
+                                <a href="products.html">Electronics</a>
                             </li>
                         </ul>
                     </div>
@@ -575,10 +518,10 @@
                         <h3>Customer help</h3>
                         <ul>
                             <li>
-                                <a href="contact.html#">Let's talk</a>
+                                <a href="contact.html">Let's talk</a>
                             </li>
                             <li>
-                                <a href="about.html#">FAQ</a>
+                                <a href="about.html">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -586,7 +529,7 @@
                         <h3>About Holo.</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">About us</a>
+                                <a href="about.html">About us</a>
                             </li>
                         </ul>
                     </div>
@@ -594,10 +537,10 @@
                         <h3>The legal</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">Term of Service</a>
+                                <a href="term.html">Term of Service</a>
                             </li>
                             <li>
-                                <a href="about.html#">Cookie Policy</a>
+                                <a href="term.html">Cookie Policy</a>
                             </li>
                         </ul>
                     </div>
