--- a/src/term.html
+++ b/src/term.html
@@ -300,16 +300,16 @@
                         <h3>Shop Products</h3>
                         <ul>
                             <li>
-                                <a href="products.html#">Women Clothes</a>
+                                <a href="products.html">Women Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Man Clothes</a>
+                                <a href="products.html">Man Clothes</a>
                             </li>
                             <li>
-                                <a href="products.html#">Accessories</a>
+                                <a href="products.html">Accessories</a>
                             </li>
                             <li>
-                                <a href="products.html#">Electronics</a>
+                                <a href="products.html">Electronics</a>
                             </li>
                         </ul>
                     </div>
@@ -317,10 +317,10 @@
                         <h3>Customer help</h3>
                         <ul>
                             <li>
-                                <a href="contact.html#">Let's talk</a>
+                                <a href="contact.html">Let's talk</a>
                             </li>
                             <li>
-                                <a href="about.html#">FAQ</a>
+                                <a href="about.html">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -328,7 +328,7 @@
                         <h3>About Holo.</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">About us</a>
+                                <a href="about.html">About us</a>
                             </li>
                         </ul>
                     </div>
@@ -336,10 +336,10 @@
                         <h3>The legal</h3>
                         <ul>
                             <li>
-                                <a href="about.html#">Term of Service</a>
+                                <a href="term.html">Term of Service</a>
                             </li>
                             <li>
-                                <a href="about.html#">Cookie Policy</a>
+                                <a href="term.html">Cookie Policy</a>
                             </li>
                         </ul>
                     </div>
